--- a/views/productos.html
+++ b/views/productos.html
@@ -15,18 +15,19 @@
     <h3>Filtros</h3>
     <nav class="filters">
       <ul>
-        <li><a href="#"><span class="btn btn-red"><i class="fa fa-trash"></i></span> Color: ficsia</a></li>
-        <li><a href="#"><span class="btn btn-red"><i class="fa fa-trash"></i></span> Talla: 22.5</a></li>
+        <!--filtro-->
+        <li><a href="{{filtro_url}}"><span class="btn btn-red"><i class="fa fa-trash"></i></span> {{filtro}}: {{valor}}</a></li>
+        <!--.filtro-->
       </ul>
     </nav>
-    <button class="btn btn-red btn-lg btn-block">Eliminar filtros</button>
+    <a href="index.php?ctrl=productos&action=list" class="btn btn-red btn-lg btn-block">Eliminar filtros</a>
     <h3>Colores</h3>
     <nav class="filters">
       <ul>
         <li>
           <ul class="colors">
             <!--color-->
-            <li><a href="#"><img src="{{color_imagen}}" data-toggle="tooltip" title="{{color_nombre}}"/></a></li>
+            <li><a href="{{color_url}}"><img src="{{color_imagen}}" data-toggle="tooltip" title="{{color_nombre}}"/></a></li>
             <!--.color-->
           </ul>
         </li>
