--- a/views/productos.html
+++ b/views/productos.html
@@ -27,7 +27,7 @@
         <li>
           <ul class="colors">
             <!--color-->
-            <li><a href="{{color_url}}"><img src="{{color_imagen}}" data-toggle="tooltip" title="{{color_nombre}}"/></a></li>
+            <li><a href="{{color_url}}"><img src="{{color_imagen}}" alt="{{color_nombre}}" data-toggle="tooltip" title="{{color_nombre}}"/></a></li>
             <!--.color-->
           </ul>
         </li>
