Ajax Select Productos

--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -34,7 +34,7 @@
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--producto-->
                           <option value="{{producto_id}}">{{producto_nombre}}</option>
                           <!--.producto-->
