--- a/admin/views/oferta-edit.html
+++ b/admin/views/oferta-edit.html
@@ -38,7 +38,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="producto">Producto <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--producto-->
                           <option value="{{producto_id}}">{{producto_nombre}}</option>
                           <!--.producto-->
