--- a/admin/views/subcategoria-edit.html
+++ b/admin/views/subcategoria-edit.html
@@ -40,7 +40,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="categoria">Categoría <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="categoria" name="categoria" class="form-control col-md-7 col-xs-12" data-required >
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--categoria-->
                           <option value="{{categoria_id}}">{{categoria_nombre}}</option>
                           <!--.categoria-->
