--- a/admin/views/producto-edit.html
+++ b/admin/views/producto-edit.html
@@ -49,7 +49,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="categoria">Categoría <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="categoria" name="categoria" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--categoria-->
                           <option value="{{categoria_id}}">{{categoria_nombre}}</option>
                           <!--.categoria-->
@@ -60,7 +60,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="subcategoria">Subcategoría <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="subcategoria" name="subcategoria" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--subcategoria-->
                           <option value="{{subcategoria_id}}">{{subcategoria_nombre}}</option>
                           <!--.subcategoria-->
@@ -100,7 +100,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="color">Color <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="color" name="color" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--color-->
                           <option value="{{color_id}}">{{color_nombre}}</option>
                           <!--.color-->
