--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -41,14 +41,14 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="contrasena">Contraseña <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="password" id="contrasena" name="contrasena" class="form-control col-md-7 col-xs-12" data-required data-password data-samepassword  value="{{contrasena}}"/>
+                        <input type="password" id="contrasena" name="contrasena" class="form-control col-md-7 col-xs-12" {{contrasena_required}} data-password data-samepassword  value="{{contrasena}}"/>
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="repetir_contrasena">Repetir contraseña <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="password" id="repetir_contrasena" name="repetir_contrasena" class="form-control col-md-7 col-xs-12" data-required data-password data-samepassword  value="{{contrasena}}"/>
+                        <input type="password" id="repetir_contrasena" name="repetir_contrasena" class="form-control col-md-7 col-xs-12" {{contrasena_required}} data-password data-samepassword  value="{{contrasena}}"/>
                       </div>
                     </div>
                     <div class="form-group">
@@ -62,7 +62,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="rol">Rol <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="rol" name="rol" class="form-control col-md-7 col-xs-12" data-required >
-                          <option value="">Seleccione</option>
+                          <!--<option value="">Seleccione</option>-->
                           <!--rol-->
                           <option value="{{rol_id}}">{{rol_nombre}}</option>
                           <!--.rol-->
