Problemas con el servidor solucionados

--- a/views/modal_address.html
+++ b/views/modal_address.html
@@ -13,7 +13,7 @@
             <label for="pais" class="control-label">País <span class="required">*</span></label>
             <div>
               <select class="form-control" id="pais" name="pais" data-required>
-                <option value="">Seleccione</option>
+                <!--<option value="">Seleccione</option>-->
                 <!--pais-->
                 <option value="{{pais_id}}">{{pais_nombre}}</option>
                 <!--.pais-->
@@ -24,7 +24,7 @@
             <label for="estado" class="control-label">Estado <span class="required">*</span></label>
             <div>
               <select class="form-control" id="estado" name="estado" data-required>
-                <option value="">Seleccione</option>
+                <!--<option value="">Seleccione</option>-->
                 <!--estado-->
                 <option value="{{estado_id}}">{{estado_nombre}}</option>
                 <!--.estado-->
@@ -35,9 +35,9 @@
             <label for="municipio" class="control-label">Municipio <span class="required">*</span></label>
             <div>
               <select class="form-control" id="municipio" name="municipio" data-required>
-                <option value="">Seleccione</option>
+                <!--<option value="">Seleccione</option>-->
                 <!--municipio-->
-                <option value="{{municipio_id}}">{{municipio_nombre}}</option>
+                <!--<option value="{{municipio_id}}">{{municipio_nombre}}</option>-->
                 <!--.municipio-->
               </select>
             </div>
