--- a/views/modal_address.html
+++ b/views/modal_address.html
@@ -8,7 +8,7 @@
         <h4 class="modal-title">Agregar domicilio</h4>
       </div>
       <div class="modal-body">
-        <form  method="post" onsubmit="return validateAddress()" data-validate-address>
+        <form  method="post" onsubmit="return validateAddress()" action="index.php?ctrl=usuarios&action=new-address&user_id={{id}}" data-validate-address>
           <div class="form-group">
             <label for="pais" class="control-label">País <span class="required">*</span></label>
             <div>
@@ -37,7 +37,7 @@
               <select class="form-control" id="municipio" name="municipio" data-required>
                 <!--<option value="">Seleccione</option>-->
                 <!--municipio-->
-                <!--<option value="{{municipio_id}}">{{municipio_nombre}}</option>-->
+                <option value="{{municipio_id}}">{{municipio_nombre}}</option>
                 <!--.municipio-->
               </select>
             </div>
@@ -84,7 +84,7 @@
           </div>
 
           <div class="form-group">
-            <button class="btn btn-red btn-lg btn-block" type="submit"><i class="fa fa-paper-plane"></i> Guardar</button>
+            <button type="submit" class="btn btn-red btn-lg btn-block"><i class="fa fa-paper-plane"></i> Guardar</button>
           </div>
 
         </form>
