--- a/views/modal_address.html
+++ b/views/modal_address.html
@@ -8,7 +8,7 @@
         <h4 class="modal-title">Agregar domicilio</h4>
       </div>
       <div class="modal-body">
-        <form  method="post" onsubmit="return validateAddress()" action="index.php?ctrl=usuarios&action=new-address&user_id={{id}}" data-validate-address>
+        <form  method="post" onsubmit="return validateAddress()" action="index.php?ctrl=usuarios&action=new-domicilio&user_id={{id}}" data-validate-address>
           <div class="form-group">
             <label for="pais" class="control-label">País <span class="required">*</span></label>
             <div>
