Permitir nulos, imágenes binarias y .jpeg

--- a/admin/views/producto-edit.html
+++ b/admin/views/producto-edit.html
@@ -20,7 +20,7 @@
                     <div class="row form-group">
                       <div class="col-md-6 col-md-offset-3">
                         <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label></label>
-                        <input type="file" id="image" name="image" class="form-control col-md-7 col-xs-12 btn" accept="image/jpg,image/png" data-image/>
+                        <input type="file" id="image" name="image" class="form-control col-md-7 col-xs-12 btn" accept="image/jpg,image/png,image/jpeg" data-image/>
                       </div>
                     </div>
                     <div class="row form-group">
