--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-md-6 col-md-offset-3">
                       <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
-                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-thumbnail/>
+                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png,image/jpeg" data-thumbnail/>
                     </div>
                   </div>
 
@@ -122,9 +122,9 @@
                       </div>
                       <p class="text-red"><i class="fa fa-star"></i>{{primario}}
                       </p>
-                      <p>{{calle}} {{exterior}} {{interior}},</p>
-                      <p><strong>Col. </strong>{{colonia}},</p>
-                      <p><strong>C.P. </strong>{{codigo_postal}},</p>
+                      <p>{{calle}} {{exterior}} {{interior}}</p>
+                      <p><strong>Col. </strong>{{colonia}}</p>
+                      <p><strong>C.P. </strong>{{codigo_postal}}</p>
                       <p>{{municipio}}, {{estado}}</p>
                     </div>
                   </div>
