--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-md-6 col-md-offset-3">
                       <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
-                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-image/>
+                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png,image/jpeg" data-image/>
                     </div>
                   </div>
                   <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
