--- a/admin/views/usuario-create.html
+++ b/admin/views/usuario-create.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-md-6 col-md-offset-3">
                       <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
-                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-thumbnail/>
+                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png,image/jpeg" data-thumbnail/>
                     </div>
                   </div>
 
@@ -103,14 +103,7 @@
               </div>
             </section>
           </div>
-
-
-
-
-
-
-
-        
+          
         </div>
       </div>
     </div>
