--- a/admin/views/usuario-create.html
+++ b/admin/views/usuario-create.html
@@ -75,12 +75,12 @@
                       <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="radio">
                           <label>
-                            <input type="radio" class="checkbox" value="femenino" id="genero" name="genero" {{femenino}}>Femenino
+                            <input type="radio" class="checkbox" value="femenino" id="genero" name="genero" checked>Femenino
                           </label>
                         </div>
                         <div class="radio">
                           <label>
-                            <input type="radio" class="checkbox" value="masculino" id="genero" name="genero" {{masculino}}>Masculino
+                            <input type="radio" class="checkbox" value="masculino" id="genero" name="genero">Masculino
                           </label>
                         </div>
                       </div>
