--- a/admin/views/modal-delete-producto.html
+++ b/admin/views/modal-delete-producto.html
@@ -12,7 +12,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-show" data-dismiss="modal"><i class="fa fa-check"></i> Aceptar</button>
-            <button type="button" class="btn btn-red" data-dismiss="modal"><i class="fa fa-ban"></i> Cancel</button>
+            <button type="button" class="btn btn-red" data-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</button>
           </div>
         </div>
       </div>
