--- a/admin/views/producto-edit.html
+++ b/admin/views/producto-edit.html
@@ -123,7 +123,7 @@
                     <div class="form-group">
                       <div class="col-md-6 col-xs-12 col-md-offset-3">
                         <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Guardar</button>
-                        <button type="button" class="btn btn-red"><i class="fa fa-ban"></i> Cancel</button>
+                        <a href="index.php?ctrl=productos" class="btn btn-red"><i class="fa fa-ban"></i> Cancelar</a>
                       </div>
                     </div>
                   </div>
