--- a/admin/views/modal-delete-descuento.html
+++ b/admin/views/modal-delete-descuento.html
@@ -9,7 +9,7 @@
             <div class="modal-body">
               <h2 class="text-center"><i class="fa fa fa-trash fa-3x"></i></h2>
               <h3 class="text-center">El descuento será eliminado definitivamente.</h3>
-              <input type="hidden" name="color_id" id="item_id" value="{{id}}" />
+              <input type="hidden" name="descuento_id" id="item_id" value="{{id}}" />
             </div>
             <div class="modal-footer">
               <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Aceptar</button>
