--- a/admin/views/ofertas.html
+++ b/admin/views/ofertas.html
@@ -54,7 +54,7 @@
                       <td>
                         <a href="{{oferta-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                         <a href="{{oferta-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
-                        <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
+                        <a href="#" class="btn btn-delete btn-delete-item" data-delete-item="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                       </td>
                     </tr>
                     <!--.row-->
