Botón DELETE usuarios

--- a/admin/views/usuarios.html
+++ b/admin/views/usuarios.html
@@ -52,7 +52,7 @@
                         <td>
                           <a href="index.php?ctrl=usuarios&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                           <a href="index.php?ctrl=usuarios&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
-                          <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
+                          <a href="#" class="btn btn-delete btn-delete-item" data-delete-item="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                         </td>
                       </tr>
                       <!--.row-->
