--- a/admin/views/productos.html
+++ b/admin/views/productos.html
@@ -67,7 +67,7 @@
                         <td>
                           <a href="{{producto-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                           <a href="{{producto-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
-                          <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
+                          <a href="#" class="btn btn-delete btn-delete-item" data-delete-item="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                         </td>
                       </tr>
                       <!--.row-->
