Formato FECHA  correcto

--- a/views/register.html
+++ b/views/register.html
@@ -42,7 +42,7 @@
         <div  class="form-group">
           <label for="fecha_nacimiento" class="control-label">Fecha de nacimiento</label>
           <div>
-            <input class="form-control" type="date" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="dd/mm/aaaa" data-required/>
+            <input class="form-control" type="date" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="aaaa/mm/dd" data-required/>
           </div>
         </div>
 
