--- a/admin/views/catalogo-edit.html
+++ b/admin/views/catalogo-edit.html
@@ -40,7 +40,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha">Fecha <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="fecha" name="fecha" placeholder="dd/mm/aaaa" data-required value="{{fecha}}"/>
+                        <input class="form-control" type="text" id="fecha" name="fecha" placeholder="aaaa/mm/dd" data-required value="{{fecha}}"/>
                       </div>
                     </div>
                     <div class="form-group"> 
