--- a/admin/views/catalogo-edit.html
+++ b/admin/views/catalogo-edit.html
@@ -16,9 +16,17 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6 col-md-offset-3">
-                      <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
-                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png,image/jpeg" data-image/>
+                    <div class="row form-group">
+                      <div class="col-md-6 col-md-offset-3">
+                        <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
+                        <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png,image/jpeg" data-image/>
+                      </div>
+                    </div>
+                    <div class="row form-group">
+                      <div class="col-md-6 col-md-offset-3">
+                        <label class="btn btn-dark btn-lg btn-block btn-upload" for="pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Subir</label>
+                        <input type="file" id="pdf" name="pdf" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="application/pdf" data-pdf data-required/>
+                      </div>
                     </div>
                   </div>
 
