Imágenes pueden ser nulas

--- a/admin/views/catalogo-edit.html
+++ b/admin/views/catalogo-edit.html
@@ -25,7 +25,7 @@
                     <div class="row form-group">
                       <div class="col-md-6 col-md-offset-3">
                         <label class="btn btn-dark btn-lg btn-block btn-upload" for="pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Subir</label>
-                        <input type="file" id="pdf" name="pdf" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="application/pdf" data-pdf data-required/>
+                        <input type="file" id="pdf" name="pdf" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="application/pdf" data-pdf {{pdf_required}}/>
                       </div>
                     </div>
                   </div>
