--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -55,9 +55,8 @@
               </a>
               <ul class="dropdown-menu user-settings">
                 <li><a href="#"><i class="fa fa-user"></i> Mi perfil</a></li>
-                <li><a href="#"><i class="fa fa-cog"></i> Configuraciones</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#"><i class="fa fa-power-off"></i> Salir</a></li>
+                <li><a href="index.php?action=logout"><i class="fa fa-power-off"></i> Salir</a></li>
               </ul>
             </li>
           </ul>
