--- a/views/404.html
+++ b/views/404.html
@@ -1,10 +1,21 @@
-<section id="error-page" class="container">  
-  <div class="row">
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Page Not Found</h1>
-        <p>Sorry, but the page you were trying to view does not exist.</p>
+    <div id="page-categories">
+      <div class="content">
+        <div class="row">
+          <div class="col-xs-12">
+            <section id="login-page" class="container">  
+              <div class="row">
+                <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                  <h1> </h1>
+                  <div class="jumbotron">
+                    <div class="container">
+                      <h1>Error 404</h1>
+                      <p>La página que estás tratando de ver no existe o no tienes acceso a ella.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</section>
