--- a/views/footer-login.html
+++ b/views/footer-login.html
@@ -23,7 +23,7 @@
               <li><a href="#">Mi cuenta</a></li>
               <!--<li><a href="index.php?ctrl=shopping-cart&action=list">Mis pedidos</a></li>-->
               <li><a href="index.php?ctrl=shopping-cart&action=list">Mi carrito</a></li>
-              <li><a href="index.php?ctrl=usuario&action=logout">Serrar sesión</a></li>
+              <li><a href="#" data-toggle="modal" data-target="#modalLogin">Iniciar sesión</a></li>
             </ul>
           </nav>
           <nav class="col-sm-3">
