--- a/views/productos.html
+++ b/views/productos.html
@@ -33,6 +33,7 @@
         </li>
       </ul>
     </nav>
+    <!--
     <h3>Precios</h3>
     <div class="filters">
       <div class="form-horizontal">
@@ -46,7 +47,7 @@
         </div>
       </div>
       <div class="flat-slider" id="flat-slider"></div>
-    </div>
+    </div>-->
   </aside>
   <section id="catalog" class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
     <section id="filter" class="row">
