--- a/views/header.html
+++ b/views/header.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media-queries.css">
     <link rel="icon" type="image/png" href="img/icono.jpg" />
+    <script src="js/jquery-2.2.2.js"></script>
 
     <!--[if lt IE 9]>
         <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
