--- a/views/menu-login.html
+++ b/views/menu-login.html
@@ -76,4 +76,52 @@
   </nav>
 </div>
 
+<div class="container">
+  <!-- Modal -->
+  <div class="modal fade" id="modalLogin" role="dialog">
+    <div class="modal-dialog modal-sm">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header modal-header-dark">
+          <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times"></i></button>
+          <h4 class="modal-title">Iniciar sesión</h4>
+        </div>
+        <div class="modal-body">
+          <div class="login">
+            <form method="post" role="form" onsubmit="return validateLogin()" data-validate-login>
+              <div class="form-group">
+                <label class="control-label">Usuario</label>
+                <div>
+                  <input type="text" class="form-control" data-required data-email/>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Contraseña</label>
+                <div>
+                  <input type="password" class="form-control" data-required data-password/>
+                </div>
+              </div>
+  
+              <button class="btn btn-red btn-lg btn-block" type="submit">
+                <i class="fa fa-check"></i> Enviar
+              </button>
+              <a href="https://www.facebook.com/" target="_blank" class="btn btn-lg btn-block btn-facebook"> 
+                <i class="fa fa-facebook"></i> Facebook
+              </a>
+              <a href="https://twitter.com/" target="_blank" class="btn btn-lg btn-block btn-twitter">
+                <i class="fa fa-twitter"></i> Twitter
+              </a>
+            </form>
+          </div>
+        </div>
+        <div class="modal-footer modal-footer-dark">
+          <a href="index.php?ctrl=usuario&action=recuperar" class="btn btn-link">¿Olvidaste la contraseña?</a>
+          <a href="index.php?ctrl=usuario&action=registro" class="btn btn-link pull-right">¡Regístrate!</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
